# errcode

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml
errcode/: CHANGELOG.md  Cargo.toml
errcode/examples/: early_test.rs
errcode/src/: error.rs  error_code.rs  error_impl.rs  errorcode.rs  impl.rs  lib.rs  macros.rs  repr.rs  traits.rs
errcode/src/error_impl/: full.rs  mod.rs  unboxed.rs
errcode/tests/: basic.rs  err_code.rs  macros.rs  traits.rs
errcode_derive/: Cargo.toml
errcode_derive/src/: enum_info.rs  generate.rs  lib.rs
