[package]
name = "enumset"
version = "0.1.0"
authors = ["Alissa Rao <aura@aura.moe>"]
edition = "2024"

description = "A Rust library for simplified error handling."
keywords = ["error", "error-handling"]
categories = ["rust-patterns", "no-std"]

documentation = "https://docs.rs/errcode/"
repository = "https://github.com/Lymia/errcode"
readme = "README.md"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Lymia/errcode", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
# The `alloc` crate is available.
#
# This enables storing the error in a one-pointer format, instead of a two-pointer format, as well
# as storing a full error context.
alloc = []

# Store an `Location` in the error type for the original location, even when `alloc` is not
# available.
#
# This increases the size of the error type from two to three pointers.
location_no_alloc = []

[dependencies]
