[package]
name = "enumset"
version = "0.1.0"
authors = ["Alissa Rao <aura@aura.moe>"]
edition = "2024"

description = "A Rust library for simplified error handling."
keywords = ["error", "error-handling"]
categories = ["rust-patterns", "no-std"]

documentation = "https://docs.rs/errcode/"
repository = "https://github.com/Lymia/errcode"
readme = "README.md"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Lymia/errcode", branch = "master" }
maintenance = { status = "actively-developed" }

[features]

######################
# Repr feature flags #
######################

# A boxed format that uses one pointer, and stores all relevant information about errors.
repr_full = []

# An unboxed format that takes two pointers.
#
# Stores minimum information about the error, in exchange for not needing `alloc` and remaining
# fairly compact.
#
# This is the default option.
repr_unboxed = []

# Similar to `repr_unboxed`, but storing reliable location information in exchange for using an
# additional pointer worth of space.
repr_unboxed_location = []

[dependencies]
